Footer for homepage

--- a/theVault/templates/theVault/home.html
+++ b/theVault/templates/theVault/home.html
@@ -58,5 +58,67 @@
          </div>
        </div>
 
+<!-- Footer -->
+<footer class="page-footer font-small bg-light pt-3 border-top-0">
+
+  <!-- Footer Links -->
+  <div class="container-fluid text-center text-md-left">
+
+    <!-- Grid row -->
+    <div class="row">
+
+      <!-- Grid column -->
+      <div class="col-md-6 mt-md-0 mt-3">
+
+        <!-- Content -->
+        <h5 class="text-uppercase">The Vault</h5>
+        <p>The Vault is a website that allows its users o generate and save secure passowords and create notes.</p>
+
+      </div>
+      <!-- Grid column -->
+
+      <hr class="clearfix w-100 d-md-none pb-3">
+
+      <!-- Grid column -->
+      <div class="col-md-3 mb-md-0 mb-3">
+
+        <!-- Links -->
+ 
+      </div>
+
+
+      <hr class="clearfix w-100 d-md-none pb-3">
+
+
+      <!-- Grid column -->
+      <div class="col-md-3 mb-md-0 mb-3">
+
+        <!-- Links -->
+        <h5 class="text-uppercase">Links</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Redoni18">Github</a>
+          </li>
+        </ul>
+
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row -->
+
+  </div>
+  <!-- Footer Links -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://github.com/Redoni18/The-Vault-Password-generator-website-with-Django"> The Vault</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
+
 
 {% endblock content %}
