--- a/theVault/templates/theVault/base.html
+++ b/theVault/templates/theVault/base.html
@@ -27,6 +27,7 @@
 
   <!-- Custom styles for this template-->
   <link href="{% static 'css/sb-admin.css' %}" rel="stylesheet">
+  <script>hljs.initHighlightingOnLoad();</script>
 
 </head>
 
