--- a/theVault/templates/theVault/newNote_form.html
+++ b/theVault/templates/theVault/newNote_form.html
@@ -4,15 +4,16 @@
 <div id="layoutAuthentication">
             <div id="layoutAuthentication_content">
                 <main>
-                    <div class="container">
+                    <div class="container-fluid">
                         <div class="row justify-content-center">
-                            <div class="col-lg-7">
+                            <div class="col-xs-12 col-md-11">
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
                                     <div class="card-header"><h3 class="text-center font-weight-light my-4">Create a new note</h3></div>
                                     <div class="card-body">
                                         <form method="POST" enctype="multipart/form-data">
                                           {% csrf_token %}
                                             <div class="form-group">
+                                              {{form.media}}
                                               {{form|crispy}}
                                           </div>
                                             <div class="form-group mt-4 mb-0">
