--- a/theVault/templates/theVault/viewNotes.html
+++ b/theVault/templates/theVault/viewNotes.html
@@ -6,7 +6,7 @@
         <div class="container">
           <div class="row">
              {% for note in vault_NewNotes %}
-             <a href="{% url 'detail' note.id %}" class="text-dark">
+             <a href="{% url 'note-detail' note.id %}" class="text-dark">
               <div class="col-md-3 col-sm-5">
                 
                 
