--- a/theVault/templates/theVault/home.html
+++ b/theVault/templates/theVault/home.html
@@ -99,7 +99,7 @@
         <ul class="list-unstyled">
           <li>
             <i class="fab fa-github"></i>
-            <a href="https://github.com/Redoni18">Github</a>
+            <a target="_blank" href="https://github.com/Redoni18">Github</a>
           </li>
         </ul>
 
